--- a/Content/Site.css
+++ b/Content/Site.css
@@ -22,3 +22,41 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.navbar-inverse {
+    background-color: red;
+    border-color: #080808;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.course > li .date {
+    text-align: center;
+    background-color: gray;
+    color: white;
+    width: 60px;
+    border-radius: 8px;
+}
+
+.course > li .lecture {
+}
+
+.course > li .category {
+}
+
+.course > li .action {
+    display: none;
+    left: 70px;
+    position: absolute;
+}
+
+.course > li :hover .action {
+    display: block;
+}
+
