--- a/Content/Site.css
+++ b/Content/Site.css
@@ -1,62 +1,76 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
-
-/* Set padding to keep content from hitting the edges */
+﻿/* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
-
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
-.dl-horizontal dt {
+/*.dl-horizontal dt {
     white-space: normal;
-}
-
+}*/
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
+}*/
+.navbar-inverse {
+    background-color: red;
+    border-color: white;
 }
 
-    .navbar-inverse {
-        background-color: red;
-        border-color: #080808;
-    }
+.navbar-inverse .navbar-nar > li > a {
+    color: white;
+}
 
-    .navbar-inverse .navbar-nav > li > a {
-        color: white;
-    }
+.navbar-inverse .navbar-brand {
+    color: white;
+}
 
-    .navbar-inverse .navbar-brand {
-        color: white;
-    }
+/*course layout*/
+.course {
+    list-style: none;
+}
 
-    .course > li .date {
-        text-align: center;
-        background-color: gray;
-        color: white;
-        width: 60px;
-        border-radius: 8px;
-    }
+.course > li 
+{
+    position: relative;
+margin-bottom: 30px;
+}
 
-    .course > li .lecture {
-    }
+.course > li .date {
+    text-align: center;
+    background-color: blue;
+    color: white;
+    width: 60px;
+    border-radius: 8px;
+}
+.course > li .details 
+{
+position: absolute;
+top: 0;
+left: 70px;
+}
+.course >li .details
+{
+    position: absolute;
+    top: 0;
+    left: 70px;
+}
 
-    .course > li .category {
-    }
+.course > li lecture {
+}
 
-    .course > li .action {
-        display: none;
-        left: 70px;
-        position: absolute;
-    }
+.course > li categogy {
+}
 
-    .course > li :hover .action {
-        display: block;
-    }
+.course > li action {
+    display: none;
+    left: 70px;
+    position: absolute;
+}
 
+.course > li:hover action {
+    display: block;
+}
