--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,43 +1,34 @@
 ﻿@model IEnumerable<BigSchool.Models.Course>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Home Page";
 }
 
-<div class="row">
-    <ul>
-        @foreach (var course in Model)
-        {
-            <li>
-                @course.Datetime.ToString("dd/MM/yyyy HH:mm") -@course.Name
-            </li>
-        }
-    </ul>
-</div>
+
 
 <div class="row">
     <ul class="course">
         @foreach (var course in Model)
         {
-            <li>
-                <div class="date">
-                    <div class="month">
-                        @course.Datetime.ToString("MM")
-                    </div>
-                    <div class="day">
-                        @course.Datetime.ToString("dd")
-                    </div>
+        <li>
+            <div class="date">
+                <div class="month">
+                    @course.DateTime.ToString("MM")
                 </div>
-                <div class="details">
-                    <span class="lecture">
-                        @course.Name
-                    </span>
-
-                    
- 
+                <div class="day">
+                    @course.DateTime.ToString("dd")
                 </div>
-            </li>
+            </div>
+            <div class="details">
+                <span class="lecture">
+                    @course.Name
+                </span>
+                <br />
+                <span class="category">
+                    @course.Category.Name
+                </span>
+            </div>
+        </li>
         }
     </ul>
 </div>
